.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:18:12 **** Incremental Build of configuration Debug for project Data_Struct_Excersice ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Data_Struct_Excersice.o" "..\\src\\Data_Struct_Excersice.c" 
gcc -o Data_Struct_Excersice.exe "src\\Data_Struct_Excersice.o" 
Info: Nothing to build for Data_Struct_Excersice
11:31:19 **** Incremental Build of configuration Debug for project Data_Struct_Excersice ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Data_Struct_Excersice.o" "..\\src\\Data_Struct_Excersice.c" 
..\src\Data_Struct_Excersice.c: In function 'main':
..\src\Data_Struct_Excersice.c:28:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |         ~^        ~~~~~~~~~~
      |          |             |
      |          int *         int
..\src\Data_Struct_Excersice.c:28:13: warning: format '%d' expects argument of type 'int *', but argument 3 has type 'int' [-Wformat=]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |            ~^                ~~~~~~~~~~~
      |             |                     |
      |             int *                 int
..\src\Data_Struct_Excersice.c:28:16: warning: format '%d' expects argument of type 'int *', but argument 4 has type 'int' [-Wformat=]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |               ~^                         ~~~~~~~~~
      |                |                              |
      |                int *                          int
..\src\Data_Struct_Excersice.c:24:8: warning: unused variable 'test' [-Wunused-variable]
   24 |  Dates test = {1999,10,25};
      |        ^~~~
..\src\Data_Struct_Excersice.c:28:2: warning: 'Input.day' is used uninitialized in this function [-Wuninitialized]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Data_Struct_Excersice.c:28:2: warning: 'Input.month' is used uninitialized in this function [-Wuninitialized]
..\src\Data_Struct_Excersice.c:28:2: warning: 'Input.year' is used uninitialized in this function [-Wuninitialized]
..\src\Data_Struct_Excersice.c:32:2: warning: 'Input.day' is used uninitialized in this function [-Wuninitialized]
   32 |  printf("%d - %d - %d",Input.year,Input.month,Input.day);
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Data_Struct_Excersice.c:32:2: warning: 'Input.month' is used uninitialized in this function [-Wuninitialized]
..\src\Data_Struct_Excersice.c:32:2: warning: 'Input.year' is used uninitialized in this function [-Wuninitialized]
gcc -o Data_Struct_Excersice.exe "src\\Data_Struct_Excersice.o" 
11:31:55 **** Incremental Build of configuration Debug for project Data_Struct_Excersice ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Data_Struct_Excersice.o" "..\\src\\Data_Struct_Excersice.c" 
..\src\Data_Struct_Excersice.c: In function 'main':
..\src\Data_Struct_Excersice.c:28:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |         ~^        ~~~~~~~~~~
      |          |             |
      |          int *         int
..\src\Data_Struct_Excersice.c:28:13: warning: format '%d' expects argument of type 'int *', but argument 3 has type 'int' [-Wformat=]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |            ~^                ~~~~~~~~~~~
      |             |                     |
      |             int *                 int
..\src\Data_Struct_Excersice.c:28:16: warning: format '%d' expects argument of type 'int *', but argument 4 has type 'int' [-Wformat=]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |               ~^                         ~~~~~~~~~
      |                |                              |
      |                int *                          int
..\src\Data_Struct_Excersice.c:28:2: warning: 'Input.day' is used uninitialized in this function [-Wuninitialized]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Data_Struct_Excersice.c:28:2: warning: 'Input.month' is used uninitialized in this function [-Wuninitialized]
..\src\Data_Struct_Excersice.c:28:2: warning: 'Input.year' is used uninitialized in this function [-Wuninitialized]
..\src\Data_Struct_Excersice.c:32:2: warning: 'Input.day' is used uninitialized in this function [-Wuninitialized]
   32 |  printf("%d - %d - %d",Input.year,Input.month,Input.day);
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Data_Struct_Excersice.c:32:2: warning: 'Input.month' is used uninitialized in this function [-Wuninitialized]
..\src\Data_Struct_Excersice.c:32:2: warning: 'Input.year' is used uninitialized in this function [-Wuninitialized]
gcc -o Data_Struct_Excersice.exe "src\\Data_Struct_Excersice.o" 
Info: Nothing to build for Data_Struct_Excersice
11:32:27 **** Incremental Build of configuration Debug for project Data_Struct_Excersice ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Data_Struct_Excersice.o" "..\\src\\Data_Struct_Excersice.c" 
..\src\Data_Struct_Excersice.c: In function 'main':
..\src\Data_Struct_Excersice.c:28:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |         ~^        ~~~~~~~~~~
      |          |             |
      |          int *         int
..\src\Data_Struct_Excersice.c:28:13: warning: format '%d' expects argument of type 'int *', but argument 3 has type 'int' [-Wformat=]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |            ~^                ~~~~~~~~~~~
      |             |                     |
      |             int *                 int
..\src\Data_Struct_Excersice.c:28:16: warning: format '%d' expects argument of type 'int *', but argument 4 has type 'int' [-Wformat=]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |               ~^                         ~~~~~~~~~
      |                |                              |
      |                int *                          int
..\src\Data_Struct_Excersice.c:28:2: warning: 'Input.day' is used uninitialized in this function [-Wuninitialized]
   28 |  scanf("%d %d %d",Input.year,Input.month,Input.day);
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Data_Struct_Excersice.c:28:2: warning: 'Input.month' is used uninitialized in this function [-Wuninitialized]
..\src\Data_Struct_Excersice.c:28:2: warning: 'Input.year' is used uninitialized in this function [-Wuninitialized]
..\src\Data_Struct_Excersice.c:32:2: warning: 'Input.day' is used uninitialized in this function [-Wuninitialized]
   32 |  printf("%d - %d - %d",Input.year,Input.month,Input.day);
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Data_Struct_Excersice.c:32:2: warning: 'Input.month' is used uninitialized in this function [-Wuninitialized]
..\src\Data_Struct_Excersice.c:32:2: warning: 'Input.year' is used uninitialized in this function [-Wuninitialized]
gcc -o Data_Struct_Excersice.exe "src\\Data_Struct_Excersice.o" 
Info: Nothing to build for Data_Struct_Excersice
11:36:09 **** Incremental Build of configuration Debug for project Data_Struct_Excersice ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Data_Struct_Excersice.o" "..\\src\\Data_Struct_Excersice.c" 
..\src\Data_Struct_Excersice.c: In function 'main':
..\src\Data_Struct_Excersice.c:29:55: error: expected ';' before 'printf'
   29 |  scanf("%d %d %d",&Input.year,&Input.month,&Input.day)
      |                                                       ^
      |                                                       ;
......
   32 |  printf("%d - %d - %d",Input.year,Input.month,Input.day);
      |  ~~~~~~                                                
11:36:19 **** Incremental Build of configuration Debug for project Data_Struct_Excersice ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Data_Struct_Excersice.o" "..\\src\\Data_Struct_Excersice.c" 
gcc -o Data_Struct_Excersice.exe "src\\Data_Struct_Excersice.o" 
Info: Nothing to build for Data_Struct_Excersice
11:36:51 **** Incremental Build of configuration Debug for project Data_Struct_Excersice ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Data_Struct_Excersice.o" "..\\src\\Data_Struct_Excersice.c" 
gcc -o Data_Struct_Excersice.exe "src\\Data_Struct_Excersice.o" 
11:39:34 **** Incremental Build of configuration Debug for project Data_Struct_Excersice ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Data_Struct_Excersice.o" "..\\src\\Data_Struct_Excersice.c" 
gcc -o Data_Struct_Excersice.exe "src\\Data_Struct_Excersice.o" 
11:40:11 **** Incremental Build of configuration Debug for project Data_Struct_Excersice ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Data_Struct_Excersice.o" "..\\src\\Data_Struct_Excersice.c" 
gcc -o Data_Struct_Excersice.exe "src\\Data_Struct_Excersice.o" 
